# Z390Kylin

./: Evolis_Z390_ErrorCode.xml  README.md  设置IP.txt
Evolis_Z390_LithographPrinter/: Evolis_Z390_LithographPrinter.pro  Evolis_Z390_LithographPrinter.pro.user.7546dcd.22  Evolis_Z390_LithographPrinter.pro.user.94aabca  Evolis_Z390_LithographPrinter.pro.user.d51cb0e  Evolis_Z390_LithographPrinter.sln  Evolis_Z390_LithographPrinter.vcxproj  Evolis_Z390_LithographPrinter.vcxproj.filters  Evolis_Z390_LithographPrinter_global.h  Printer_Command.txt  Printerlib.h  autoprinter.cpp  autoprinter.h  evolis_z390_lithographprinter.cpp  evolis_z390_lithographprinter.debug.cpp  evolis_z390_lithographprinter.h
Evolis_Z390_printer/: .qmake.stash  AES.cpp  Evolis_Z390_Printer.pro  LithographPrinter.h  QEvolisPrinter.bak.cpp  QEvolisPrinter.cpp  QEvolisPrinter.h  Z390.qrc  decardlib.h  dynamiclib.h  evolis_z390_printer.MultiImage.h  evolis_z390_printer.cpp  evolis_z390_printer.h  evolis_z390_printer.multiimage.cpp  evolislib.h  install-debug.bat  install.bat  readerMinhua.h  readerbase.cpp  readerbase.h  readerdecard.h  浙江长城信息自助发卡模块发卡接口_德生科技_V1.0.0.5.20210207(1).docx
Z390Sample/: AndroidManifest.xml  CardPrinter_GWI_SSCard.wfm  README.md  Z390 IC Command.txt  Z390Sample.pro  main.cpp  (+8 more)
gwi-clithographprinter-v20210827.8bd23a1-linux-aarch64/examples/: CMakeLists.txt  barcode.cpp  card.cpp  cardOrientation.cpp  duplex.cpp  gwiCardFlow.cpp  invertFace.cpp  mag.cpp  main.cpp  nonPrintingAreas.cpp  pageRotation.cpp  printingMode.cpp  simplex.cpp  status.cpp  text.cpp  version.cpp
(+57 files in other folders)
